# blog-2021-07

./: .clang-format  CMakeLists.txt  CMakePresets.json
webserver/: CMakeLists.txt  cxx20.cpp  demo.cpp  interrupt_or_wait.cpp  test-interrupt_or_wait.cpp  test-program_stop.cpp  webserver.cpp  wsecho.cpp
webserver/src/: CMakeLists.txt  any_websocket.cpp  any_websocket.hpp  asio.hpp  beast.hpp  disposition.hpp  interrupt.cpp  interrupt.hpp  program_stop_sink.cpp  program_stop_sink.hpp  program_stop_source.cpp  program_stop_source.hpp  signal.cpp  signal.hpp  stop_event.cpp  stop_event.hpp  stop_listener.cpp  stop_listener.hpp
webserver/src/detail/: program_stop_state.cpp  program_stop_state.hpp
